--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-columns": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
