--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-ga": "^2.7.0",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
