npm-react-toggle

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-spinners": "^0.8.3"
+    "react-spinners": "^0.8.3",
+    "react-toggle": "^4.1.1",
+    "react-tooltip": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
